--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,8 @@
-<div class="navbar-wagon">
+<div class="navbar-wagon fixed-top">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "logo.png" %>
+    Active Blueprint
   <% end %>
 
   <!-- Right Navigation -->
