--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
   a {
   color: white !important;
   text-decoration: none !important;
@@ -59,7 +60,7 @@
   transition: color 0.3s ease;
   font-weight: lighter !important;
   color: #999999 !important;
-  font-size: 15px !important;
+  font-size: 14px !important;
   line-height: 22px !important;
   padding: 10px 20px;
 }
