Rendered corresponding specialties in the side bar of a project, fixed layout of sidebar and navbar added specialtiez to projectsController : to get specialties that belong to a specific project and diplay them outside the gantt

--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -2,7 +2,9 @@
   padding-left: 50px;
   transition: all 0.4s ease 0s;
   display: flex;
-  align-items: top;
+  // align-items: top;
+  top: 70px;
+  position: relative;
 }
 
 .sidebar-wrapper {
@@ -22,6 +24,7 @@
 .page-content-wrapper {
   width: 100%;
   flex-grow: 3;
+  height: 2000px;
 }
 
 .sidebar-nav {
