fixed rendering, navigation, update and creation for all tasks and specialties from the show page - fixed the general layout for the sticky navbar, fixed forms for redirection and input symbols

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   </head>
   <body>
     <%= render "shared/navbar" %>
+    <div class="height" style="height: 70px;"></div>
     <%= render 'shared/flashes' %>
     <%= yield %>
     <%= render "shared/footer" %>
