--- a/app/views/shared/_navcard.html.erb
+++ b/app/views/shared/_navcard.html.erb
@@ -1,7 +1,7 @@
 <% @specialtiez.each do |s| %>
   <div class="card">
     <div class="card-description">
-      <p><%= link_to "#{s.name}" , project_specialty_path(@project) %></p>
+      <p><%= link_to "#{s.name}" , project_specialty_path( @project, s) %></p>
       <p><%= s.start.strftime("%Y-%m-%d") %> - <%= s.finish.strftime("%Y-%m-%d") %></p>
     </div>
     <img class="card-user" src="#">
