--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -16,18 +16,14 @@
               <p><%= @project.description %></p>
               <p><%= @project.projected_budget %></p>
               <p><%= @project.address %></p>
-              <p><%= @project.start_date %></p>
-              <p><%= @project.end_date %></p>
+              <p><%= @project.start_date.strftime("%Y-%m-%d") %></p>
+              <p><%= @project.end_date.strftime("%Y-%m-%d") %></p>
               <p><%= @project.status %></p>
               <div><a href="#" class="btn-treehouse">message my team</a></div>
             </div>
             <h2>Specialties  <%= link_to "Add a new specialty", new_project_specialty_path(@project) %></h2>
             <div class="gantt-container" style="overflow: scroll;">
               <svg id="gantt"></svg>
-              <%= form_tag project_path(@project), method: :patch, remote: true, id: "hidden_gantt_form" do %>
-                <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-                <%= hidden_field_tag :tasks, "", id: "gnatt_tasks_input"  %>
-              <% end %>
             </div>
           </div>
         </div>
@@ -52,4 +48,9 @@
   var railsGantt = new RailsGantt("#gantt", <%= raw JSON.generate(@specialties) %>);
   railsGantt.gantt.change_view_mode('Month')
 </script>
+<% end %>
+
+<%= form_tag project_specialty_path(@project, 1), method: :patch, remote: true, id: "hidden_gantt_form" do %>
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+  <%= hidden_field_tag :tasks, "", id: "gnatt_tasks_input"  %>
 <% end %>
