--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,7 @@
       <%= f.input :email, required: true, autofocus: true %>
       <%= f.input :password, required: true, hint: ("note: minimum of #{@minimum_password_length} characters needed" if @minimum_password_length) %>
       <%= f.input :password_confirmation, required: true %>
+      <%= f.input :photo, as: :attachinary %>
     </div>
 
     <div class="form-actions">
