tweaked font on user profile page

--- a/app/assets/stylesheets/pages/_userprofile.scss
+++ b/app/assets/stylesheets/pages/_userprofile.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: Open-sans, sans-serif;
+  font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
 }
 h1, h2, h3 {
   font-family: Raleway, Helvetica, sans-serif;
@@ -21,7 +21,6 @@ a {
 .list-inline {
   list-style: none;
 }
-
 
 .avatar {
   width: 30px;
