--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
 
   <% @tasks.each do |task| %>
-    <%= task.specialty %> | <%= task.priority %> | <%= task.title %> | <%= task.description %> | <%= task.budget %> | <%= task.status %> | <%= task.start_date %> | <%= task.end_date %>
-    <%= link_to 'Check', project_task_path(task.project, task) %>
-    <%= link_to 'Edit', edit_project_task_path(task.project, task) %>
-    <%= link_to "Delete task", project_task_path(task.project, task),
+    <%= task.specialty %>
+    <%= task.priority %>
+    <%= task.name %> | <%= task.description %> | <%= task.budget %> | <%= task.status %> | <%= task.start %> | <%= task.finish %>
+    <%= link_to 'Check', project_specialty_task_path(task.project, task.specialty, task) %>
+    <%= link_to 'Edit', edit_project_specialty_task_path(task.project, task.specialty, task) %>
+    <%= link_to "Delete task", project_specialty_task_path(task.project, task.specialty, task),
       method: :delete,
       data: { confirm: "Are you sure?" } %>
   <% end %>
