--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,21 +1,17 @@
-<h1>TASK NAME : <%= @task.title %></h1>
+<h1>TASK NAME : <%= @task.name %></h1>
 
-<p> Specialty: <%= @task.specialty %></p>
+<p> Specialty: <%= @task.specialty.name %></p>
+<p><%= @task.user.username %></p>
 <p><%= @task.priority %></p>
 <p><%= @task.description %></p>
 <p><%= @task.budget %></p>
 <p><%= @task.status %></p>
-<p><%= @task.start_date %></p>
-<p><%= @task.end_date %></p>
+<p><%= @task.start %></p>
+<p><%= @task.finish %></p>
 
-<%= link_to "All tasks", project_tasks_path %>
-<%= link_to 'Edit', edit_project_task_path(@project, @task) %>
-<%= link_to  "Add a new task", new_project_task_path %>
-<%= link_to "Delete task", project_task_path(@project, @task),
+<%= link_to "All tasks", project_specialty_tasks_path(@task.specialty.project, @task.specialty) %>
+<%# link_to  "Add a new task", new_project_task_path %>
+<%= link_to 'Edit', edit_project_specialty_task_path(@task.specialty.project, @task.specialty, @task) %>
+<%= link_to "Delete task", project_specialty_task_path(@task.specialty.project, @task.specialty, @task),
       method: :delete,
       data: { confirm: "Are you sure?" } %>
-
-
-
-
-
