--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -50,7 +50,7 @@
 </script>
 <% end %>
 
-<%= form_tag project_specialty_path(@project, 1), method: :patch, remote: true, id: "hidden_gantt_form" do %>
+<%= form_tag specialties_gantt_update_path(@project), method: :patch, remote: true, id: "hidden_gantt_form" do %>
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <%= hidden_field_tag :tasks, "", id: "gnatt_tasks_input"  %>
 <% end %>
