--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -2,9 +2,9 @@
   <% if @task.errors.any? %>
     <div id=“error_explanation”>
       <ul>
-      <% @task.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @task.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
@@ -17,9 +17,10 @@
     <%= f.input :status, collection: [ "Stand by", "Pending Ok", "Pending Blocked", "Closed", "Adandonned", "Completed"], input_html: {  class: 'form-control' } %>
     <%= f.input :start, input_html: { placeholder: "", class: 'form-control' } %>
     <%= f.input :finish, input_html: { placeholder: "", class: 'form-control' } %>
+    <%= f.select :user, options_for_select(User.all.to_a.map { |obj| [obj['username'], obj['id']] }) %>
   </div>
-
   <div class="form-actions">
     <%= f.submit class: "btn btn-success" %>
   </div>
 <% end %>
+
