--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Edit <%= @task.title %></h2>
+  <h2>Edit <%= @task.name %></h2>
   <%= render 'form' %>
-  <%= link_to 'Back', project_task_path(@project, @task) %>
+  <%= link_to 'Back', project_specialty_task_path(@project, @specialty, @task) %>
 </div>
