adding ability ot upload a photo (called cover when creating a new project

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -12,6 +12,7 @@
   <div class="form-inputs">
     <%= f.input :title, input_html: { placeholder: "what name would you give your project?", class: 'form-control' } %>
     <%= f.input :address, input_html: { placeholder: "where's it taking place?", class: 'form-control' } %>
+    <%= f.input :cover, as: :attachinary %>
     <%= f.input :description, input_html: { placeholder: "be specific...", class: 'form-control' } %>
     <%= f.input :projected_budget, input_html: { placeholder: "", class: 'form-control' } %>
     <%= f.input :status, collection: [ "Stand by", "Pending Ok", "Pending Blocked", "Closed", "Adandonned", "Completed"], input_html: {  class: 'form-control' } %>
