Beginning styling for new-project-form

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -10,6 +10,7 @@
     </div>
   <% end %>
   <div class="form-inputs">
+    <h1>Add a Project</h1>
     <%= f.input :title, input_html: { placeholder: "what name would you give your project?", class: 'form-control' } %>
     <%= f.input :address, input_html: { placeholder: "where's it taking place?", class: 'form-control' } %>
     <%= f.input :description, input_html: { placeholder: "be specific...", class: 'form-control' } %>
