--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,9 @@
-<div class="container col-xs-6">
-  <%= render "form" %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+        <%= render "form" %>
+    </div>
+  </div>
 </div>
 
 
