--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,13 @@
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <% avatar_url = cl_image_path(current_user.photo.path) || current_user.facebook_picture_url || "http://placehold.it/30x30" %>
+          <% if current_user.facebook_picture_url? %>
+            <% avatar_url = current_user.facebook_picture_url || "http://placehold.it/30x30" %>
+          <% elsif  current_user.photo.nil? %>
+             <% avatar_url = "http://placehold.it/30x30" %>
+          <% else %>
+            <%= avatar_url = cl_image_tag current_user.photo.path, height: 30, width: 30, :crop=>"fill" %>
+          <% end %>
           <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
