sidebar added to speciality show, modivied shared navcard to display tasks and specialties

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-3">
       <div class="sidebar-wrapper">
         <div class="sidebar-nav">
-            <%= render "shared/navcard" %>
+            <%= render "shared/navcard_specialties" %>
         </div>
       </div>
     </div>
@@ -31,17 +31,6 @@
     </div>
   </div>
 </div>
-<!-- <div class="container">
-
-</div> -->
-<!-- <a href="#" class="btn-treehouse">message my team</a> -->
-
-
-<!-- <h2> Location of the project (Geocoding?) </h2>
-
-<h2> (Maybe on to the right side) Location of the project (Geocoding?) </h2>
-
-<p>a button could be handy if we <%= link_to "a handy button", class: "btn-treehouse" %> want to send a message to everyone involved in the job</p> -->
 
 <%= content_for(:after_js) do %>
   <script>
