updated link to task show page

--- a/app/views/shared/_navcard_tasks.html.erb
+++ b/app/views/shared/_navcard_tasks.html.erb
@@ -1,7 +1,7 @@
 <% @specialty.tasks.each do |t| %>
   <div class="card">
     <div class="card-description">
-      <p><%= link_to "#{t.name}" , project_specialty_path( @project, @specialty, t) %></p>
+      <p><%= link_to "#{t.name}" , project_specialty_task_path( @project, @specialty, t) %></p>
       <p><%= t.start.strftime("%Y-%m-%d") %> - <%= t.finish.strftime("%Y-%m-%d") %></p>
     </div>
     <img class="card-user" src="#">
