added Antoine's fonts and tested implementation of fonts via navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+  font-family: $body-font;
   a {
   color: black !important;
   text-decoration: none !important;
