--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,39 +4,39 @@
   <div class="row">
     <div class="message">
       <div class="message-name">
-        <h3> FontAwesome Icon Here </h3>
+        <h3><i class="large material-icons">access_alarm</i></h3>
       </div>
       <div class="message-body">
-        <p> efficiency: get the job done in fewer clicks—like a boss </p>
+        <p> get the job done in fewer clicks — like a boss </p>
       </div>
       <div class="message-name">
-        <h3> FontAwesome Icon Here </h3>
+        <h3> <i class="large material-icons">cloud_done</i> </h3>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="message">
       <div class="message-name">
-        <h3> FontAwesome Icon Here </h3>
+        <h3><i class="large material-icons">weekend</i></h3>
       </div>
       <div class="message-body">
-        <p> easy peasy: sit back. the algorithm learns your style </p>
+        <p> easy peasy. let the algorithm learn your style </p>
       </div>
       <div class="message-name">
-        <h3> FontAwesome Icon Here </h3>
+        <h3><i class="large material-icons">thumb_up</i></h3>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="message">
       <div class="message-name">
-        <h3> FontAwesome Icon Here </h3>
+        <h3><i class="large material-icons">message</i></h3>
       </div>
       <div class="message-body">
-        <p> transparency: be in the know. </p>
+        <p> transparency: collaborate and stay in the know. </p>
       </div>
       <div class="message-name">
-        <h3> FontAwesome Icon Here </h3>
+        <h3><i class="large material-icons">people_outline</i></h3>
       </div>
     </div>
   </div>
