--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,4 +9,7 @@
   <div class="footer-copyright">
     conjured up with <i class="fa fa-heart"></i> from <%= link_to "hamza", "https://www.linkedin.com/in/hamzaboughaleb/" %>, <%= link_to "julia", "https://www.linkedin.com/in/julia-rix-b9176ba8/" %>, and <%= link_to "brian", "https://www.linkedin.com/in/brian-clary-77004442/" %> at <%= link_to "Le Wagon Montréal", "https://www.lewagon.com/montreal" %>.
   </div>
+  <div class="text-center">
+    5333, avenue Casgrain, Suite 102 | Montréal, Québec H2T 1X6
+</div>
 </div>
