--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -56,11 +56,13 @@
   border-bottom: none;
 }
 .message-body {
+  text-align: center !important;
   flex-grow: 1;
 }
 .message-name {
   padding-left: 10px;
   min-width: 100px;
+  text-align: center !important;
 }
 .message-name h3 {
   font-size: 13px;
@@ -74,7 +76,7 @@
 }
 .message-body {
   padding-left: 10px;
-  font-size: 13px;
+  font-size: 16px;
   color: rgba(0,0,0,0.7);
 }
 .message-body {
