updated homepage banner image (removed gradient), did the same for user#show page

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,7 @@
-<div class="banner parallax" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'homepage-bg.png' %>');">
+<div class="banner parallax" style="background-image: url('<%= image_path 'homepage-bg.png' %>');">
   <div class="banner-content">
     <h1 class="text-center">the new frontier</h1>
-    <h2 class="text-center">in project-management transparency</h2>
+    <h2 class="text-center">of project-management transparency</h2>
   </div>
 </div>
 
