--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,9 +11,8 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "my projects", projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "add a project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "all my tasks", all_tasks_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "dashboard", projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "start a project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
