fixed footer alignment and address

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<div>
+  <div>
     <div class="profile-header-wrapper" style="background-image: url('<%= image_path 'project-show.png' %>');">
       <div class="container profile-header-container text-center">
         <div class="profile-header-infos">
@@ -42,6 +44,9 @@
           <li><a href=""><i class="fa fa-star"></i></a></li>
         </ul>
     </div>
+  </div>
+</div>
+
       <!-- <div class="product">
         <div class='product-upvote'>
           <div class="product-arrow"></div>
