--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
         <h3><i class="large material-icons">message</i></h3>
       </div>
       <div class="message-body">
-        <p> transparency: collaborate and stay in the know. </p>
+        <p> transparency: collaborate and stay in the know </p>
       </div>
       <div class="message-name">
         <h3><i class="large material-icons">people_outline</i></h3>
