--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,21 +29,27 @@
     </div>
 
     <div class="container">
+      <% @user.projects.each do |project| %>
       <div class="product">
         <div class='product-upvote'>
           <div class="product-arrow"></div>
           <div class='product-count'></div>
         </div>
+        <%= link_to project_path(project) do %>
+        <div class="product-image" style="background-image: url('<%= cl_image_path project.cover.path, crop: :fill, width: 150, height: 100 rescue "" %>')">
+        </div>
+        <% end %>
         <div class='product-body'>
-          <h3> project title </h3>
-          <p> project title </p>
+          <h3><%= project.title %></h3>
+          <p><%= project.description %></p>
         </div>
         <ul class="list-inline product-controls">
-          <li><a href=""><i class="fa fa-heart"></i></a></li>
-          <li><a href=""><i class="fa fa-share"></i></a></li>
-          <li><a href=""><i class="fa fa-star"></i></a></li>
+          <% project.contributors.each do |user| %>
+          <%= cl_image_tag user.photo.path, class: "avatar"%>
         </ul>
-    </div>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 </div>
 
