--- a/app/assets/stylesheets/components/_form_projects.scss
+++ b/app/assets/stylesheets/components/_form_projects.scss
@@ -6,33 +6,68 @@
   h1 {
     text-align: center;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 24px;
     color: #666666;
     margin-bottom: 30px;
   }
-}
-.project_specialties {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin: 20px 0;
-  .checkbox {
-  background: #b7b7b7;
-  padding: 20px;
-  border-radius: 5px;
-  opacity: .4;
-  flex: 0 0 30%;
-  text-align: center;
-  &:hover {
-    opacity: 1;
-    cursor: pointer;
+  h2 {
+    text-align: left;
+    font-weight: bold;
+    font-size: 20px;
+    color: black;
+    margin-bottom: 10px;
   }
-  &.active {
-  background: $brand-primary;
-  color: white;
-  opacity: 1;
-  }
-}
 }
 
+.generator {
+  border-color: #666666;;
+  padding: 10px;
+  margin: 5px;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+}
+
+.project_specialties {
+  margin: 30px 0;
+  .checkbox {
+    margin: 10px;
+    display: inline-block;
+    background: #b7b7b7;
+    padding: 10px;
+    border-radius: 5px;
+    opacity: .4;
+    text-align: center;
+    height: 50px;
+    &:hover {
+      opacity: 1;
+      cursor: pointer;
+    }
+    &.active {
+      background: #32B796;
+      color: white;
+      opacity: 1;
+    }
+  }
+}
+
+.new-project-form {
+  max-width: 650px;
+  margin: 0 auto;
+}
+
+.form-actions {
+  margin: 20px;
+}
+
+abbr {
+  display: none;
+}
+
+.doublefields {
+  display: flex;
+  justify-content: space-between;
+  div {
+    width: 48%;
+  }
+}
 
